Layout bugs fixed

--- a/orcamento/style.css
+++ b/orcamento/style.css
@@ -5,7 +5,7 @@
         padding: 0;
         margin: 0;
         font-family: Arial, Helvetica, sans-serif;
-        font-size: 22px;
+        font-size: 20px;
         font-weight: bold;
         color: rgb(87, 58, 33);
         background-color: #c8b68b;
